[package]
name = "firefly-editor"
version = "0.1.0"
authors = ["Aaron Brodersen <aaron@abrodersen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde_json = "1.0"
xdg = "2.1"
decimal = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }